# Medical-AI-Datathon-Datasets

./: .gitignore  README.md  pyproject.toml
jobs/: audit_hf_dataset_upload.slurm  build_cxr_report_es_challenge_upload.slurm  download_cbis_ddsm.slurm  download_lidc_idri.slurm  download_prepare_padchest_gr_xray.slurm  download_prepare_taix_ray.slurm  package_hf_dataset.slurm  prepare_cbis_ddsm.slurm  prepare_lidc_idri_224.slurm  prepare_lidc_idri_384.slurm  prepare_mbrset.slurm  prepare_mimic.slurm  translate_mimic_reports_openai.slurm  upload_hf_datasets.slurm
notebooks/: 01_mimic_cxr_overview.ipynb  02_mbrset_overview.ipynb  03_cbis_ddsm_overview.ipynb  05_mimic_cxr_medsiglip_embeddings.ipynb  06_mbrset_medsiglip_embeddings.ipynb  07_cbis_ddsm_medsiglip_embeddings.ipynb  08_lidc_idri_colipri_embeddings.ipynb
readmes/: CBIS-DDSM-clean.md  CXR-REPORT-ES-CHALLENGE.md  LIDC-IDRI-clean.md  MIMIC-CXR.md  mBRSET.md
scripts/: audit_hf_dataset_upload.py  build_cxr_report_es_challenge_upload.py  dataset_utils.py  download_cbis_ddsm_labels.py  download_hf_datasets.py  download_lidc_idri_labels.py  download_prepare_padchest_gr_xray.py  download_prepare_taix_ray.py  download_tcia_collection.py  package_hf_dataset.py  prepare_cbis_ddsm.py  prepare_lidc_idri.py  prepare_mbrset.py  prepare_mimic.py  translate_mimic_reports_openai.py  upload_hf_dataset.py
