[project]
name = "medical-ai-datathon"
version = "0.1.0"
description = "Utilities and notebooks for the Medical AI Datathon datasets."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0",
    "colipri==0.1.1",
    "huggingface-hub>=0.24",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "pydicom>=2.4",
    "protobuf>=5.0",
    "python-dotenv>=1.0",
    "scikit-learn>=1.5",
    "sentencepiece>=0.2",
    "torch==2.10.0",
    "torchio>=0.20",
    "transformers==5.3.0",
    "tqdm>=4.66",
]

[tool.uv]
package = false
